test(video_player): update audio tracks test to use ImmutableList and fix format builders